# shd

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  setup.py  shd
.cargo/: config.toml
src/: main.rs
