[package]
name = "shd"
version = "0.1.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
glob = "0.3.0"
colored = "2.0.0"
prettytable-rs = "0.8.0"
byte-unit = "4.0.12"
clap = "3.0.0-beta.2"
