[package]
name = "shd"
version = "0.1.4"
edition = "2018"
license = "MIT"
description = "Shows pretty HDD/SSD list"
authors = ["Serhij S. <div@altertech.com>"]
repository = "https://github.com/alttch/shd"
keywords = ["ssd", "hdd", "list", "cli"]

[dependencies]
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
glob = "0.3.0"
colored = "2.0.0"
prettytable-rs = "0.10.0"
byte-unit = "4.0.12"
clap = { version = "3.0.7", features = ["derive"] }
